--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@supabase/supabase-js": "^2.49.1",
+    "appwrite": "^14.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.38.3",
+    "firebase": "^11.3.0",
     "lucide-react": "^0.469.0",
     "motion": "^11.18.0",
     "next": "15.1.3",
